// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalTrackSelector drawer widget renders nothing with no dataset 1`] = `null`;

exports[`HierarchicalTrackSelector drawer widget renders with a couple of categorized tracks 1`] = `
<div
  class="makeStyles-root"
  data-testid="hierarchical_track_selector"
>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-searchBox MuiFormControl-fullWidth"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
    >
      Filter Tracks
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-colorSecondary"
            >
              clear
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      class="makeStyles-track"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root makeStyles-formControlLabel"
        title="The reference sequence for volvox"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input"
              data-indeterminate="false"
              data-testid="htsTrackEntry-sequenceConfigId"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Reference Sequence (volvox)
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <hr
    class="MuiDivider-root makeStyles-divider"
  />
  <div
    class="MuiFormGroup-root"
  />
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-rounded"
    style="margin-top: 4px;"
  >
    <div
      aria-disabled="false"
      aria-expanded="true"
      class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
      >
        <p
          class="MuiTypography-root MuiTypography-body2"
        >
          Foo Category (1)
        </p>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-colorSecondary"
          >
            expand_more
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
            >
              <div
                class="MuiFormGroup-root"
              >
                <div
                  class="makeStyles-track"
                  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                >
                  <label
                    class="MuiFormControlLabel-root makeStyles-formControlLabel"
                    title=""
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input"
                          data-indeterminate="false"
                          data-testid="htsTrackEntry-fooC"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Track
                    </span>
                  </label>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
                      >
                        settings
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation1 MuiExpansionPanel-root MuiExpansionPanel-expanded MuiExpansionPanel-rounded MuiPaper-rounded"
                style="margin-top: 4px;"
              >
                <div
                  aria-disabled="false"
                  aria-expanded="true"
                  class="MuiButtonBase-root MuiExpansionPanelSummary-root MuiExpansionPanelSummary-expanded"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiExpansionPanelSummary-content MuiExpansionPanelSummary-expanded"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Bar Category (1)
                    </p>
                  </div>
                  <div
                    aria-disabled="false"
                    aria-hidden="true"
                    class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded MuiIconButton-edgeEnd"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiIcon-colorSecondary"
                      >
                        expand_more
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-container MuiCollapse-entered"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <div
                        role="region"
                      >
                        <div
                          class="MuiExpansionPanelDetails-root makeStyles-expansionPanelDetails"
                        >
                          <div
                            class="MuiFormGroup-root"
                          >
                            <div
                              class="makeStyles-track"
                              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                            >
                              <label
                                class="MuiFormControlLabel-root makeStyles-formControlLabel"
                                title=""
                              >
                                <span
                                  aria-disabled="false"
                                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                                >
                                  <span
                                    class="MuiIconButton-label"
                                  >
                                    <input
                                      checked=""
                                      class="PrivateSwitchBase-input"
                                      data-indeterminate="false"
                                      data-testid="htsTrackEntry-barC"
                                      type="checkbox"
                                      value=""
                                    />
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root"
                                      focusable="false"
                                      role="presentation"
                                      viewBox="0 0 24 24"
                                    >
                                      <path
                                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </span>
                                <span
                                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                >
                                  Track
                                </span>
                              </label>
                              <button
                                class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
                                  >
                                    settings
                                  </span>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiFormGroup-root"
  />
  <button
    class="MuiButtonBase-root MuiFab-root makeStyles-fab MuiFab-secondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with a couple of uncategorized tracks 1`] = `
<div
  class="makeStyles-root"
  data-testid="hierarchical_track_selector"
>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-searchBox MuiFormControl-fullWidth"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
    >
      Filter Tracks
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-colorSecondary"
            >
              clear
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      class="makeStyles-track"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root makeStyles-formControlLabel"
        title="The reference sequence for volMyt1"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input"
              data-indeterminate="false"
              data-testid="htsTrackEntry-sequenceConfigId"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Reference Sequence (volMyt1)
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <hr
    class="MuiDivider-root makeStyles-divider"
  />
  <div
    class="MuiFormGroup-root"
  >
    <div
      class="makeStyles-track"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root makeStyles-formControlLabel"
        title=""
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input"
              data-indeterminate="false"
              data-testid="htsTrackEntry-fooC"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Track
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="makeStyles-track"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root makeStyles-formControlLabel"
        title=""
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary makeStyles-checkbox PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input"
              data-indeterminate="false"
              data-testid="htsTrackEntry-barC"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Track
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-configureButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-colorSecondary MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiFormGroup-root"
  />
  <button
    class="MuiButtonBase-root MuiFab-root makeStyles-fab MuiFab-secondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
